# lis-project

./: .gitignore  README.md  dune-project  lis-project.opam  shell.nix
examples/: 1.sl  10.sl  11_a.sl  11_b.isl  11_c.isl  11_d.isl  12.sl  12a.isl  12b.isl  12c.isl  13_b.isl  13_c.isl  14.isl  14b.isl  14c.isl  15.sl  16.sl  17_a.sl  17_b.sl  18.sl  19_a.sl  2.sl  20.sl  21_a.sl  21_b.sl  22_a.sl  22_b.sl  23_a.sl  23_b.sl  23_d.sl  24_a.sl  24_b.sl  24_c.sl  24_d.sl  25.sl  26.sl  27_a.isl  27_b.isl  27_c.isl  28.isl  (+40 more)
lib/: aexp.ml  aexp.mli  ast.ml  atom.ml  atom.mli  bexp.ml  bexp.mli  cmd.ml  cmd.mli  cmp.ml  dummy.ml  dummy.mli  dune  executor.ml  executor.mli  executor_state.ml  executor_state.mli  ide.ml  ide.mli  isl_executor.ml  isl_executor.mli  lexer.mll  norm_bexp.ml  norm_bexp.mli  norm_prop.ml  norm_prop.mli  normalization.ml  parser.mly  path_cond.ml  path_cond.mli  pp_util.ml  prog.ml  prog.mli  prop.ml  prop.mli  simplify.ml  sl_executor.ml  sl_executor.mli  triple.ml
report/: preamble.tex  report.tex
test/: dune  test_executor.ml  test_lis_project.ml  test_parser_printer.ml  test_simplify.ml
